--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,17 @@
     <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap"></noscript>
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
+  <style>
+    * {
+  font-family: 'Montserrat', sans-serif;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+.invalid-feedback{
+  text-align: left;
+}
+  </style>
   <body>
     <noscript>
       <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
