--- a/public/index.html
+++ b/public/index.html
@@ -33,6 +33,15 @@
   margin: 0;
   padding: 0;
 }
+.container, .container-fluid, .container-lg, .container-md, .container-sm, .container-xl, .container-xxl {
+    --bs-gutter-x: 1.5rem;
+    --bs-gutter-y: 0;
+    width: 100%;
+    padding-right: calc(var(--bs-gutter-x)*.5) !important;
+    padding-left: calc(var(--bs-gutter-x)*.5) !important;
+    margin-right: auto !important;
+    margin-left: auto !important;
+}
 ::selection {
   /* Change highlight background color to black */
   background: #000;
@@ -41,6 +50,9 @@
 }
 .invalid-feedback{
   text-align: left;
+}
+input[type="radio"]:checked {
+  filter: grayscale(100%) contrast(200%);
 }
   </style>
   <body>
