--- a/public/index.html
+++ b/public/index.html
@@ -54,6 +54,14 @@
 input[type="radio"]:checked {
   filter: grayscale(100%) contrast(200%);
 }
+.swal2-confirm {
+    padding: 7px 35px;
+    border-radius: 25px !important;
+    background-color: #000 !important;
+}
+.swal2-confirm:focus{
+  box-shadow: none !important;
+}
   </style>
   <body>
     <!-- Inside the Body -->
