--- a/public/index.html
+++ b/public/index.html
@@ -54,13 +54,25 @@
 input[type="radio"]:checked {
   filter: grayscale(100%) contrast(200%);
 }
-.swal2-confirm {
+.swal2-confirm,
+.swal2-styled {
     padding: 7px 35px;
     border-radius: 25px !important;
     background-color: #000 !important;
 }
-.swal2-confirm:focus{
+.swal2-confirm:focus,
+swal2-styled:focus{
   box-shadow: none !important;
+}
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+}
+
+/* Firefox */
+input[type=number] {
+  -moz-appearance: textfield;
 }
   </style>
   <body>
