--- a/public/index.html
+++ b/public/index.html
@@ -74,6 +74,9 @@ input::-webkit-inner-spin-button {
 input[type=number] {
   -moz-appearance: textfield;
 }
+input[type="checkbox"]:checked {
+  filter: grayscale(100%) contrast(200%);
+}
   </style>
   <body>
     <!-- Inside the Body -->
