after success text

--- a/public/index.html
+++ b/public/index.html
@@ -88,6 +88,15 @@ input[type="checkbox"]:checked {
 .my-swal-container .swal2-title {
   font-size: 25px;
 }
+.toastitle{
+  font-size: 1.2rem !important;
+}
+.toastpara{
+  font-size: 1rem !important;
+}
+.sadtoast{
+  font-size: 1.5rem !important;
+}
   </style>
   <body>
     <!-- Inside the Body -->
