--- a/public/index.html
+++ b/public/index.html
@@ -84,9 +84,24 @@ input[type="checkbox"]:checked {
 .my-swal-container .swal2-close:focus {
   box-shadow: none !important;
 }
-
 .my-swal-container .swal2-title {
-  font-size: 25px;
+  font-size: 22px;
+}
+.toastitle{
+  font-size: 1.2rem !important;
+}
+.sadtoast{
+  font-size: 1.5rem !important;
+}
+div:where(.swal2-container) button:where(.swal2-close){
+  padding: 0.325rem 0.75rem !important;
+    background: black !important;
+    position: absolute;
+    right: 10px;
+    top: 10px;
+    font-size: 1rem !important;
+    height: auto !important;
+    width: auto !important;
 }
   </style>
   <body>
