afte todays fixes

--- a/public/index.html
+++ b/public/index.html
@@ -103,6 +103,9 @@ div:where(.swal2-container) button:where(.swal2-close){
     height: auto !important;
     width: auto !important;
 }
+div:where(.swal2-container) button:where(.swal2-close):hover{
+    color: white !important
+}
   </style>
   <body>
     <!-- Inside the Body -->
