--- a/public/index.html
+++ b/public/index.html
@@ -36,6 +36,7 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+  font-weight: 300;
 }
 .container, .container-fluid, .container-lg, .container-md, .container-sm, .container-xl, .container-xxl {
     --bs-gutter-x: 1.5rem;
