--- a/public/index.html
+++ b/public/index.html
@@ -119,7 +119,10 @@ div:where(.swal2-container) button:where(.swal2-close):hover{
 .btn-danger:hover{
   opacity: 0.8;
 }
-
+.lawyer-list li.active {
+    background: black !important;
+    color: white;
+}
 
 
   </style>
