--- a/public/index.html
+++ b/public/index.html
@@ -31,6 +31,20 @@
 
     <script src="path-to-jquery/jquery.min.js"></script>
     <script src="path-to-vue/vue.js"></script>
+
+
+    <script>
+      if ('serviceWorker' in navigator) {
+        navigator.serviceWorker.register('/firebase-messaging-sw.js')
+          .then((registration) => {
+            console.log('Service Worker registered with scope:', registration.scope);
+          })
+          .catch((error) => {
+            console.error('Error registering Service Worker:', error);
+          });
+      }
+    </script>
+
   </head>
   <style>
     * {
