--- a/public/index.html
+++ b/public/index.html
@@ -128,7 +128,7 @@ div:where(.swal2-container) button:where(.swal2-close):hover{
     font-size: 16px !important;
 }
 .btn-danger{
-  background-color: #d50014 !important;
+  background-color: #3f0000 !important;
 }
 .btn-danger:hover{
   opacity: 0.8;
