--- a/public/index.html
+++ b/public/index.html
@@ -138,7 +138,9 @@ div:where(.swal2-container) button:where(.swal2-close):hover{
     color: white;
 }
 
-
+.swal2-success-circular-line-left, .swal2-success-fix , .swal2-success-circular-line-right {
+    background-color: transparent !important;
+}
   </style>
   <body>
     <!-- Inside the Body -->
