--- a/public/index.html
+++ b/public/index.html
@@ -141,6 +141,15 @@ div:where(.swal2-container) button:where(.swal2-close):hover{
 .swal2-success-circular-line-left, .swal2-success-fix , .swal2-success-circular-line-right {
     background-color: transparent !important;
 }
+@media only screen and (max-width: 767px) {
+.input-group.w-75{
+  width: 100%;
+}
+.input-group.w-75 ~ .btn {
+    margin: 10px 0 0 0 !important;
+}
+
+}
   </style>
   <body>
     <!-- Inside the Body -->
