--- a/public/index.html
+++ b/public/index.html
@@ -141,8 +141,15 @@ div:where(.swal2-container) button:where(.swal2-close):hover{
 .swal2-success-circular-line-left, .swal2-success-fix , .swal2-success-circular-line-right {
     background-color: transparent !important;
 }
-.navbar-nav .left-menu a.nav-link {
+.navbar-nav .nav-link {
     font-weight: 500 !important;
+    color: black ;
+}
+.apexcharts-canvas{
+  font-family: 'Montserrat' !important;
+}
+text#SvgjsText5030 {
+    font-weight: 600;
 }
 @media only screen and (max-width: 767px) {
 .input-group.w-75{
