--- a/public/index.html
+++ b/public/index.html
@@ -34,36 +34,36 @@
 
 
     <script>
-      // if ('serviceWorker' in navigator) {
-      //   navigator.serviceWorker.register('/firebase-messaging-sw.js')
-      //     .then((registration) => {
-      //       console.log('Service Worker registered with scope:', registration.scope);
-      //     })
-      //     .catch((error) => {
-      //       console.error('Error registering Service Worker:', error);
-      //     });
-      // }
-
-
-      if (!("Notification" in window)) {
-    // Check if the browser supports notifications
-    alert("This browser does not support desktop notification");
-    console.log('This browser does not support desktop notification');
-  } else if (Notification.permission === "granted") {
-    // Check whether notification permissions have already been granted;
-    // if so, create a notification
-    const notification = new Notification("Hi there!");
-    // …
-  } else if (Notification.permission !== "denied") {
-    // We need to ask the user for permission
-    Notification.requestPermission().then((permission) => {
-      // If the user accepts, let's create a notification
-      if (permission === "granted") {
-        const notification = new Notification("Hi there!");
-        // …
+      if ('serviceWorker' in navigator) {
+        navigator.serviceWorker.register('/firebase-messaging-sw.js')
+          .then((registration) => {
+            console.log('Service Worker registered with scope:', registration.scope);
+          })
+          .catch((error) => {
+            console.error('Error registering Service Worker:', error);
+          });
       }
-    });
-  }
+
+
+  //     if (!("Notification" in window)) {
+  //   // Check if the browser supports notifications
+  //   alert("This browser does not support desktop notification");
+  //   console.log('This browser does not support desktop notification');
+  // } else if (Notification.permission === "granted") {
+  //   // Check whether notification permissions have already been granted;
+  //   // if so, create a notification
+  //   const notification = new Notification("Hi there!");
+  //   // …
+  // } else if (Notification.permission !== "denied") {
+  //   // We need to ask the user for permission
+  //   Notification.requestPermission().then((permission) => {
+  //     // If the user accepts, let's create a notification
+  //     if (permission === "granted") {
+  //       const notification = new Notification("Hi there!");
+  //       // …
+  //     }
+  //   });
+  // }
     </script>
 
   </head>
