--- a/public/index.html
+++ b/public/index.html
@@ -34,15 +34,15 @@
 
 
     <script>
-      if ('serviceWorker' in navigator) {
-        navigator.serviceWorker.register('/firebase-messaging-sw.js')
-          .then((registration) => {
-            console.log('Service Worker registered with scope:', registration.scope);
-          })
-          .catch((error) => {
-            console.error('Error registering Service Worker:', error);
-          });
-      }
+      // if ('serviceWorker' in navigator) {
+      //   navigator.serviceWorker.register('/firebase-messaging-sw.js')
+      //     .then((registration) => {
+      //       console.log('Service Worker registered with scope:', registration.scope);
+      //     })
+      //     .catch((error) => {
+      //       console.error('Error registering Service Worker:', error);
+      //     });
+      // }
 
 
   //     if (!("Notification" in window)) {
