--- a/public/index.html
+++ b/public/index.html
@@ -172,6 +172,13 @@ div:where(.swal2-container) button:where(.swal2-close):hover{
 text#SvgjsText5030 {
     font-weight: 600;
 }
+.circular-image{
+  width: 100px !important;
+    height: 100px !important;
+    border-radius: 50% !important;
+    object-fit: cover;
+}
+
 @media only screen and (max-width: 767px) {
 .input-group.w-75{
   width: 100%;
