--- a/public/index.html
+++ b/public/index.html
@@ -83,6 +83,9 @@
     margin-right: auto !important;
     margin-left: auto !important;
 }
+.circular-container{
+  overflow: visible !important;
+}
 ::selection {
   /* Change highlight background color to black */
   background: #000;
