--- a/public/index.html
+++ b/public/index.html
@@ -126,7 +126,7 @@ input[type="checkbox"]:checked {
   box-shadow: none !important;
 }
 .my-swal-container .swal2-title {
-  font-size: 22px;
+  font-size: 24px !important;
 }
 .toastitle{
   font-size: 1.2rem !important;
@@ -147,6 +147,9 @@ div:where(.swal2-container) button:where(.swal2-close){
 div:where(.swal2-container) button:where(.swal2-close):hover{
     color: white !important
 }
+div:where(.swal2-container) h2:where(.swal2-title){
+  font-size: 24px !important;
+}
 .summ .table-title h5 {
     font-weight: 600 !important;
     font-size: 16px !important;
@@ -161,7 +164,9 @@ div:where(.swal2-container) button:where(.swal2-close):hover{
     background: black !important;
     color: white;
 }
-
+div:where(.swal2-container) .swal2-html-container{
+  margin: 1em 0.8em !important;
+}
 .swal2-success-circular-line-left, .swal2-success-fix , .swal2-success-circular-line-right {
     background-color: transparent !important;
 }
@@ -189,7 +194,13 @@ text#SvgjsText5030 {
 .input-group.w-75 ~ .btn {
     margin: 10px 0 0 0 !important;
 }
-
+}
+.softblue{
+  background-color: #88C7FA !important;
+  border-color: #88C7FA !important;
+}
+.softblue:focus{
+  box-shadow: none !important;
 }
   </style>
   <body>
