--- a/public/index.html
+++ b/public/index.html
@@ -127,6 +127,7 @@ input[type="checkbox"]:checked {
 }
 .my-swal-container .swal2-title {
   font-size: 24px !important;
+  color: black;
 }
 .toastitle{
   font-size: 1.2rem !important;
@@ -210,7 +211,64 @@ text#SvgjsText5030 {
 .softblue:focus{
   box-shadow: none !important;
 }
+.proposed-work .wrapper h6 {
+    display: flex !important;
+    flex-wrap: wrap !important;
+    justify-content: space-between !important;
+    align-items: center !important;
+}
+.proposed-work .wrapper:first-child h6 {
+    display: flex !important;
+    flex-direction: column !important;
+    justify-content: center !important;
+    align-items: center !important;
+  
+}
+.proposed-work .wrapper:first-child h6 span{
+  border-radius: 50px !important;
+  font-weight: 500 !important;
+    font-size: 14px !important;
+    background-color: black;
+    color: white;
+    padding: 5px 25px;
+    margin-top: 10px;
+}
+.proposed-work .wrapper h6 b {
+    font-weight: 600;
+    color: black;
+}
+.proposed-work .wrapper:first-child h6 b{
+    font-weight: 800 !important;
+  }
 
+ span.class-para::-webkit-scrollbar {
+  width: 6px;
+  border-radius: 10px;
+}
+
+ span.class-para::-webkit-scrollbar-thumb {
+  background-color: #969696;
+  /* outline: 1px solid #292929; */
+  border-radius: 10px;
+}
+
+ span.class-para::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 6px rgba(217, 217, 217, 1);
+  border-radius: 10px;
+}
+ span.class-para {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  min-height: 20px;
+  max-height: 100px;
+  /* line-break: anywhere; */
+  overflow-y: auto;
+  padding-right: 10px;
+  margin-right: 5px;
+  text-align: start;
+  white-space: normal;
+    word-break: break-word;
+}
   </style>
   <body>
     <!-- Inside the Body -->
