--- a/public/index.html
+++ b/public/index.html
@@ -224,6 +224,34 @@ text#SvgjsText5030 {
   white-space: normal;
     word-break: break-word;
 }
+.font-set {
+    font-size: 16px;
+    font-weight: 800;
+    color: black;
+}
+span.btn-charge {
+    font-size: 14px !important;
+    font-weight: 500;
+    border-radius: 50px !important;
+    background: black !important;
+}
+.flex-class p, p.flex-class {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
+    font-size: 16px;
+    color: black;
+}
+.proposed-work .table-title {
+    font-size: 16px;
+    color: black;
+}
+.flex-class p span:first-child, p.flex-class span:first-child {
+  font-weight: 600;
+    font-size: 16px;
+    margin-right: 10px;
+}
   </style>
   <body>
     <!-- Inside the Body -->
