--- a/public/index.html
+++ b/public/index.html
@@ -252,6 +252,12 @@ span.btn-charge {
     font-size: 16px;
     margin-right: 10px;
 }
+.table-wrap .wrapper {
+    color: black;    
+}
+.table-wrap .wrapper *{
+  font-size: 16px;
+}
   </style>
   <body>
     <!-- Inside the Body -->
