--- a/public/index.html
+++ b/public/index.html
@@ -258,6 +258,9 @@ span.btn-charge {
 .table-wrap .wrapper *{
   font-size: 16px;
 }
+.stepbtn .btn.softblue {
+    background: #91c8fc !important;
+}
   </style>
   <body>
     <!-- Inside the Body -->
