--- a/public/index.html
+++ b/public/index.html
@@ -290,6 +290,12 @@ span.btn-charge {
   /* outline: 1px solid #292929; */
   border-radius: 10px;
 }
+div.top-wrapper{
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  /* flex-wrap: wrap; */
+}
   </style>
   <body>
     <!-- Inside the Body -->
