--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,12 @@
 
   </head>
   <style>
+    .disabled-swtich input:checked+.slider {
+    background-color: grey !important;
+}
+    button.menu-burger {
+    background: transparent !important;
+}
     * {
   font-family: 'Montserrat', sans-serif;
   box-sizing: border-box;
