--- a/public/index.html
+++ b/public/index.html
@@ -280,6 +280,7 @@ span.btn-charge {
     white-space: pre-line;
     text-align: left;
     font-size: 16px;
+    width: 100%;
 }
 .descriptionText::-webkit-scrollbar {
   width: 6px;
@@ -300,6 +301,7 @@ div.top-wrapper{
   display: flex;
   justify-content: flex-start;
   align-items: center;
+  width: 100%;
   /* flex-wrap: wrap; */
 }
   </style>
