--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
     <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap"></noscript> 
   <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
     
-    <title><%= htmlWebpackPlugin.options.title %></title>
+    <title>Simplawfy</title>
 
     <script src="path-to-jquery/jquery.min.js"></script>
     <script src="path-to-vue/vue.js"></script>
@@ -303,6 +303,9 @@ div.top-wrapper{
   align-items: center;
   width: 100%;
   /* flex-wrap: wrap; */
+}
+div.fee-estimate {
+    font-size: 16px;
 }
   </style>
   <body>
