--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,13 @@
 
   </head>
   <style>
+    .nav-pills .nav-link.active, .nav-pills .show>.nav-link {
+    color: white;
+    background-color: #000000;
+}
+.nav-pills .nav-link, .nav-link:focus, .nav-link:hover {
+    color: #000000;
+}
     .disabled-swtich input:checked+.slider {
     background-color: grey !important;
 }
