--- a/public/index.html
+++ b/public/index.html
@@ -48,6 +48,9 @@
     <script src="path-to-vue/vue.js"></script>
   </head>
   <style>
+    button.customBtnClass {
+    background: #88c7fa !important;
+}
     .nav-pills .nav-link.active,
     .nav-pills .show > .nav-link {
       color: white;
