--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,9 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
+    <title>Simplawfy - Independent Australian Legal Marketplace</title>
+    <meta name="description" content="An online legal marketplace making law simple by helping you find a lawyer or promote your law firm." />
+    <meta name="robots" content="index,follow" />
     <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
     <link
       rel="preload"
@@ -40,9 +43,7 @@
       rel="stylesheet"
     />
 
-    <title>Simplawfy</title>
-    <meta name="description" content="" />
-    <meta name="robots" content="index,follow" />
+   
 
     <script src="path-to-jquery/jquery.min.js"></script>
     <script src="path-to-vue/vue.js"></script>
