--- a/public/index.html
+++ b/public/index.html
@@ -322,11 +322,15 @@
     .stepbtn .btn.softblue {
       background: #91c8fc !important;
     }
+    .limitText{
+      line-break: anywhere;
+
+    }
     .descriptionText {
       overflow: hidden;
       text-overflow: ellipsis;
-      min-height: 20px;
-      max-height: 120px;
+      min-height: 20px !important;
+      max-height: 120px !important;
       /* line-break: anywhere; */
       overflow-y: auto;
       padding-right: 10px;
@@ -378,5 +382,8 @@
       >
     </noscript>
     <div id="app"></div>
+
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
+
   </body>
 </html>
