--- a/public/index.html
+++ b/public/index.html
@@ -330,7 +330,7 @@
       overflow: hidden;
       text-overflow: ellipsis;
       min-height: 20px !important;
-      max-height: 120px !important;
+      max-height: 120px !;
       /* line-break: anywhere; */
       overflow-y: auto;
       padding-right: 10px;
@@ -383,7 +383,6 @@
     </noscript>
     <div id="app"></div>
 
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
 
   </body>
 </html>
