--- a/public/index.html
+++ b/public/index.html
@@ -341,11 +341,13 @@
       width: 100%;
     }
     .descriptionText::-webkit-scrollbar {
+      -webkit-appearance: none;
       width: 6px;
       border-radius: 10px;
     }
 
     .descriptionText::-webkit-scrollbar-track {
+      -webkit-box-shadow:inset 0 0 6px rgba(217, 217, 217, 1);
       box-shadow: inset 0 0 6px rgba(217, 217, 217, 1);
       border-radius: 10px;
     }
