--- a/public/index.html
+++ b/public/index.html
@@ -339,6 +339,7 @@
       text-align: left;
       font-size: 16px;
       width: 100%;
+      -webkit-overflow-scrolling: touch;
     }
     .descriptionText::-webkit-scrollbar {
       -webkit-appearance: none;
