--- a/public/index.html
+++ b/public/index.html
@@ -327,10 +327,11 @@
 
     }
     .descriptionText {
+      position: relative;
       overflow: hidden;
       text-overflow: ellipsis;
       min-height: 20px !important;
-      max-height: 120px !important;
+      max-height: 100px !important;
       /* line-break: anywhere; */
       overflow-y: auto;
       padding-right: 10px;
