--- a/public/index.html
+++ b/public/index.html
@@ -341,6 +341,7 @@
       font-size: 16px;
       width: 100%;
       -webkit-overflow-scrolling: touch;
+      overscroll-behavior-y: auto;
     }
     .descriptionText::-webkit-scrollbar {
       -webkit-appearance: none;
