--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,8 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
+    <meta name="viewport" content="width=device-width, maximum-scale=1">
+
     <title>Simplawfy - Independent Australian Legal Marketplace</title>
     <meta name="description" content="An online legal marketplace making law simple by helping you find a lawyer or promote your law firm." />
  
@@ -329,7 +331,7 @@
     .descriptionText {
       position: relative;
       overflow: hidden;
-      text-overflow: ellipsis;
+      /* text-overflow: ellipsis; */
       min-height: 20px !important;
       max-height: 100px !important;
       /* line-break: anywhere; */
@@ -340,8 +342,8 @@
       text-align: left;
       font-size: 16px;
       width: 100%;
-      -webkit-overflow-scrolling: touch;
-      overscroll-behavior-y: auto;
+      /* -webkit-overflow-scrolling: touch;
+      overscroll-behavior-y: auto; */
     }
     .descriptionText::-webkit-scrollbar {
       -webkit-appearance: none;
