--- a/public/index.html
+++ b/public/index.html
@@ -342,8 +342,8 @@
       text-align: left;
       font-size: 16px;
       width: 100%;
-      /* -webkit-overflow-scrolling: touch;
-      overscroll-behavior-y: auto; */
+      -webkit-overflow-scrolling: touch;
+      /* overscroll-behavior-y: auto; */
     }
     .descriptionText::-webkit-scrollbar {
       -webkit-appearance: none;
