--- a/public/index.html
+++ b/public/index.html
@@ -328,22 +328,28 @@
       line-break: anywhere;
 
     }
-    .descriptionText {
-      position: relative;
-      overflow: hidden;
-      /* text-overflow: ellipsis; */
-      min-height: 20px !important;
+    .textwrap {
+       min-height: 20px !important;
       max-height: 100px !important;
+    position: relative;
+    overflow: hidden;
+    overflow-y: auto;
+}
+    .descriptionText {
+      /* position: relative; */
+      /* overflow: hidden; */
+      text-overflow: ellipsis;
+      /* min-height: 20px !important;
+      max-height: 100px !important; */
       /* line-break: anywhere; */
-      overflow-y: auto;
+      /* overflow-y: auto; */
       padding-right: 10px;
       margin-right: 5px;
       white-space: pre-line;
       text-align: left;
       font-size: 16px;
       width: 100%;
-      /* -webkit-overflow-scrolling: touch;
-      overscroll-behavior-y: auto;  */
+   
     }
     .descriptionText::-webkit-scrollbar {
       -webkit-appearance: none;
