--- a/public/index.html
+++ b/public/index.html
@@ -336,13 +336,13 @@
     overflow-y: auto;
 }
     .descriptionText {
-      /* position: relative; */
-      /* overflow: hidden; */
+      position: relative; 
+       overflow: hidden;
       text-overflow: ellipsis;
-      /* min-height: 20px !important;
-      max-height: 100px !important; */
+      min-height: 20px !important;
+      max-height: 100px !important;
       /* line-break: anywhere; */
-      /* overflow-y: auto; */
+      overflow-y: auto !important; 
       padding-right: 10px;
       margin-right: 5px;
       white-space: pre-line;
