--- a/public/index.html
+++ b/public/index.html
@@ -53,6 +53,16 @@
    
   </head>
   <style>
+    html{
+    height: 100%;
+}
+
+body{ 
+    margin:0;
+    padding:0;
+    overflow:hidden;
+    height:100%;
+}
     div:where(.swal2-container).swal2-center>.swal2-popup a{
       color: #91c8fc !important;
     }
