--- a/public/index.html
+++ b/public/index.html
@@ -63,6 +63,9 @@ body{
     overflow:hidden;
     height:100%;
 }
+.initialText{
+  overflow: initial !important;
+}
     div:where(.swal2-container).swal2-center>.swal2-popup a{
       color: #91c8fc !important;
     }
