--- a/public/index.html
+++ b/public/index.html
@@ -203,6 +203,9 @@
       border-radius: 50% !important;
       object-fit: cover;
     }
+   .container.mobile-layout ul.dropdown-menu.show {
+    inset: 0px 0px auto auto !important;
+}
 
     @media only screen and (max-width: 767px) {
       div:where(.swal2-container) button:where(.swal2-close) {
@@ -344,21 +347,40 @@
       text-align: left;
       font-size: 16px;
       width: 100%;
-      -webkit-overflow-scrolling:touch;   
+      -webkit-overflow-scrolling: touch;   
     }
-    .descriptionText::-webkit-scrollbar {
+    .top-text-wrap{
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      width: 100%;
+      position: relative; 
+
+    }
+    .descriptionTextAbout{
+      padding-right: 10px;
+      margin-right: 5px;
+      white-space: pre-line;
+      text-align: left;
+      font-size: 16px;
+      width: 100%;
+      position: relative; 
+      min-height: 20px !important;
+      max-height: 100px !important;
+    }
+    .descriptionText::-webkit-scrollbar, .top-text-wrap::-webkit-scrollbar {
       /* -webkit-appearance: none; */
       width: 6px;
       border-radius: 10px;
     }
 
-    .descriptionText::-webkit-scrollbar-track {
+    .descriptionText::-webkit-scrollbar-track, .top-text-wrap::-webkit-scrollbar-track {
       -webkit-box-shadow:inset 0 0 6px rgba(217, 217, 217, 1);
       box-shadow: inset 0 0 6px rgba(217, 217, 217, 1);
       border-radius: 10px;
     }
 
-    .descriptionText::-webkit-scrollbar-thumb {
+    .descriptionText::-webkit-scrollbar-thumb , .top-text-wrap::-webkit-scrollbar-thumb {
       background-color: rgba(217, 217, 217, 1);
       /* outline: 1px solid #292929; */
       border-radius: 10px;
@@ -383,9 +405,9 @@
     .set-pad{
       padding: 0 !important;
     }
-    .initialText{
-  overflow: initial !important;
-}
+        .initialText{
+      overflow: initial !important;
+    }
   }
  
   </style>
