--- a/public/index.html
+++ b/public/index.html
@@ -355,7 +355,6 @@
       justify-content: center;
       width: 100%;
       position: relative; 
-
     }
     .descriptionTextAbout{
       padding-right: 10px;
@@ -384,6 +383,12 @@
       background-color: rgba(217, 217, 217, 1);
       /* outline: 1px solid #292929; */
       border-radius: 10px;
+    }
+    .success-class{
+      text-align: start;
+    font-size: 16px;
+    color: black;
+    font-weight: 600;
     }
     .WordSection1 a, .profile-container a{
       color: #91c8fc;
