--- a/public/index.html
+++ b/public/index.html
@@ -390,6 +390,30 @@
     color: black;
     font-weight: 600;
     }
+    .modal-header h5 {
+    font-size: 24px !important;
+    color: black;
+    font-weight: 600;
+    text-align: center;
+}
+.modal-header {
+    text-align: center;
+    border: none;
+    padding: 15px 15px 0px 15px;
+}
+.modal-header button.btn-close {
+    padding: 0.325rem 0.75rem !important;
+    background: black !important;
+    position: absolute;
+    right: 15px;
+    top: 15px;
+    font-size: 1rem !important;
+    height: 24px;
+    width: 10px;
+    opacity: 1;
+    color: white !important;
+    font-size: 10px !important;
+}
     .WordSection1 a, .profile-container a{
       color: #91c8fc;
     }
