--- a/public/index.html
+++ b/public/index.html
@@ -119,7 +119,7 @@
       background-color: #000 !important;
     }
     .swal2-confirm:focus,
-    swal2-styled:focus,
+    .swal2-styled:focus,
     .swal2-close:focus {
       box-shadow: none !important;
     }
