--- a/public/index.html
+++ b/public/index.html
@@ -50,6 +50,10 @@
 
     <script src="path-to-jquery/jquery.min.js"></script>
     <script src="path-to-vue/vue.js"></script>
+
+    <!-- Google tag (gtag.js) --> 
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-1QJQM4FTQD"></script> 
+    <script>   window.dataLayer = window.dataLayer || [];   function gtag(){dataLayer.push(arguments);}   gtag('js', new Date());   gtag('config', 'G-1QJQM4FTQD'); </script>
    
   </head>
   <style>
@@ -470,11 +474,5 @@
       >
     </noscript>
     <div id="app"></div>
-
-
-
-    
-
-
   </body>
 </html>
